# unibe_deep_learning

./: .gitignore  README.md  env.def  makefile  pyproject.toml
notebooks/transformers/: segmentation.ipynb
notebooks/tutorial_01/: cats_dogs.ipynb  cats_dogs_solution.ipynb
notebooks/tutorial_02/: pytorch-linearregression-solution.ipynb  pytorch-linearregression-template.ipynb  pytorch-mnist-template.ipynb  pytorch-tutorial.ipynb
notebooks/tutorial_03/: tutorial_03_pytorch_template 2.ipynb
notebooks/tutorial_04/: dataset.py  main.py  mlp.py  tutorial_04.ipynb
notebooks/tutorial_06/: cats_dogs_convolution-full.ipynb
notebooks/tutorial_07/: tutorial_07_solution.ipynb
notebooks/tutorial_08/: Tutorial8.ipynb  Tutorial8_solution.ipynb
src/: data_loader.py  main.py
src/models/: linear.py  nn_classifier.py
