[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "unibe_deep_learning"
version = "0.1.0"
description = "Deep Learning at Uni Bern"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "notebook>=7.5.5",
    "numpy>=2.4.3",
    "scipy>=1.17.1",
    "timm>=1.0.26",
    "tqdm>=4.67.3",
    "transformers[pytorch]>=5.5.0",
]

[tool.uv]
package = true

[tool.setuptools]
package-dir = {"" = "src"}

# [tool.ruff]
# # Enable linting and fixing for import sorting
# select = ["I"]  # I = isort (import sorting)
# fix = true      # Automatically apply fixes

# [project.scripts]
# pat = "src.cli.main:cli"
